--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hamburger-react": "^2.5.2",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.16"
