--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "hamburger-react": "^2.5.2",
     "react": "^19.2.0",
