--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 
+VITE_APIKEY=AIzaSyDFh5qmMfuqrCNpgHHm2FLwPJhc9qtLxeA
+VITE_AUTHDOMAIN=mobile-shop-1c286.firebaseapp.com
+VITE_PROJECTID=mobile-shop-1c286
+VITE_STORAGEBUCKET=mobile-shop-1c286.firebasestorage.app
+VITE_MESSAGINGSENDERID=228800579685
+VITE_APPID=1:228800579685:web:1075a95abc66c815bf5e8c
