--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "react-router": "^7.9.5",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.16"
