--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "hamburger-react": "^2.5.2",
+    "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
